# Res6-Net

./: .gitignore  CELEBDF_GUIDE.md  MODEL_ARCHITECTURE.md  README.md  balanced_synthesis.txt  check_data_leakage.py  check_data_split.py  config.py  inspect_celebdf_dataset.py  pyproject.toml  run_cross_validation_celebdf.py  test.py  test_celebdf.py  test_celebdf_ensemble.py  test_celebdf_ensemble_cross_dataset.py  train.py  train_celebdf.py  trainer.py  util.py  verify_celebdf_implementation.py
dataset/: dataset.py  transforms.py
models/: resnet18.py
notebook/: analysis.ipynb  crossdataset.ipynb
scripts/: __init__.py  check_data_leakage.py  check_data_split.py  inspect_celebdf_dataset.py  verify_celebdf_implementation.py
test/: __init__.py  test.py  test_celebdf.py  test_celebdf_ensemble.py  test_celebdf_ensemble_cross_dataset.py
train/: __init__.py  run_cross_validation_celebdf.py  train.py  train_celebdf.py
utils/: __init__.py  config.py  trainer.py  util.py
